fixing the date issue in the spec
